--- a/k8s-dns-dnsmasq-nanny-amd64/Dockerfile
+++ b/k8s-dns-dnsmasq-nanny-amd64/Dockerfile
@@ -1,2 +1,1 @@
-FROM gcr.io/google_containers/k8s-dns-dnsmasq-nanny-amd64:1.14.5
-MAINTAINER Jason.lui <piml.lui@gmail.com>
+FROM k8s.gcr.io/k8s-dns-dnsmasq-nanny-amd64:1.14.8
